# iletimerkezi-python

./: .gitignore  README.md  pyproject.toml  setup.py
src/iletimerkezi/: __init__.py  base_response.py  client.py  version.py
src/iletimerkezi/http/: __init__.py  base.py  urllib_client.py
src/iletimerkezi/models/: summary.py  webhook_report.py
src/iletimerkezi/responses/: __init__.py  account_response.py  blacklist_response.py  report_response.py  sender_response.py  sms_response.py  summary_response.py
src/iletimerkezi/services/: __init__.py  account_service.py  blacklist_service.py  report_service.py  sender_service.py  sms_service.py  summary_service.py  webhook_service.py
