[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iletimerkezi"
version = "1.0.0"
authors = [
    { name="IletiMerkezi Technical Team", email="destek@emarka.com.tr" },
]
description = "İleti Merkezi Python SDK"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/iletimerkezi/iletimerkezi-python"
"Bug Tracker" = "https://github.com/iletimerkezi/iletimerkezi-python/issues"